# Chip8-Emulator

./: CMakeLists.txt  README.md  chip8  chip8.c  chip8.h  test  test.c
doc/: info.md
src/: chip8.c
